--- a/app/src/main/res/layout/overlay_open_book.xml
+++ b/app/src/main/res/layout/overlay_open_book.xml
@@ -3,62 +3,53 @@
     android:id="@+id/openBookOverlay"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:clickable="true"
-    android:focusable="true"
+    android:background="#B0000000"
     android:visibility="gone"
-    android:background="#66000000">
+    android:clickable="true"
+    android:focusable="true">
 
-    <!-- Book container centered -->
     <FrameLayout
         android:id="@+id/bookContainer"
-        android:layout_width="300dp"
-        android:layout_height="380dp"
-        android:layout_gravity="center">
+        android:layout_width="340dp"
+        android:layout_height="240dp"
+        android:layout_gravity="center"
+        android:clickable="true"
+        android:focusable="true">
 
-        <!-- LEFT PAGE -->
-        <FrameLayout
-            android:id="@+id/pageLeft"
-            android:layout_width="150dp"
-            android:layout_height="match_parent"
-            android:layout_gravity="start"
-            android:background="#F7F2E8">
-
-            <!-- optional subtle inner shadow -->
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="#11000000" />
-        </FrameLayout>
-
-        <!-- RIGHT PAGE -->
-        <FrameLayout
-            android:id="@+id/pageRight"
-            android:layout_width="150dp"
-            android:layout_height="match_parent"
-            android:layout_gravity="end"
-            android:background="#F7F2E8">
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="#11000000" />
-        </FrameLayout>
-
-        <!-- SPINE -->
-        <View
-            android:id="@+id/bookSpine"
-            android:layout_width="10dp"
-            android:layout_height="match_parent"
-            android:layout_gravity="center"
-            android:background="#D9D1C6" />
-
-        <!-- OVERALL SHADOW -->
         <View
             android:id="@+id/bookShadow"
-            android:layout_width="match_parent"
+            android:layout_width="18dp"
             android:layout_height="match_parent"
-            android:background="#33000000"
-            android:alpha="0.0" />
+            android:layout_gravity="center"
+            android:alpha="0"
+            android:background="@android:color/black" />
+
+        <ImageView
+            android:id="@+id/pageLeft"
+            android:layout_width="170dp"
+            android:layout_height="match_parent"
+            android:layout_gravity="start"
+            android:scaleType="fitXY"
+            android:src="@drawable/book_left" />
+
+        <ImageView
+            android:id="@+id/pageRight"
+            android:layout_width="170dp"
+            android:layout_height="match_parent"
+            android:layout_gravity="end"
+            android:scaleType="fitXY"
+            android:src="@drawable/book_right" />
     </FrameLayout>
+
+    <!-- optional hint -->
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Tap to open"
+        android:textColor="#FFFFFF"
+        android:textSize="14sp"
+        android:layout_gravity="center_horizontal|bottom"
+        android:layout_marginBottom="28dp"
+        android:alpha="0.85"/>
 
 </FrameLayout>
