--- a/app/src/main/res/drawable/bg_pill_button.xml
+++ b/app/src/main/res/drawable/bg_pill_button.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <corners android:radius="999dp"/>
-    <solid android:color="#F3EFD8"/>
-    <stroke android:width="2dp" android:color="#F5F1DD"/>
+    <gradient
+        android:angle="0"
+        android:startColor="#B8D0FF"
+        android:endColor="#E9F1FF"
+        android:type="linear"/>
+    <stroke android:width="2dp" android:color="#66FFFFFF"/>
 </shape>
