--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -89,6 +89,22 @@
                         android:layout_height="match_parent"
                         android:layout_margin="10dp"
                         android:background="@drawable/circle_fill_light" />
+
+                    <!-- ✅ ADDED: avatar image inside the circle (clickable) -->
+                    <ImageView
+                        android:id="@+id/imgProfileAvatar"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_margin="20dp"
+                        android:src="@drawable/boy"
+                        android:scaleType="centerCrop"
+                        android:background="@drawable/bg_avatar_border_selector"
+                        android:padding="6dp"
+                        android:clipToOutline="true"
+                        android:outlineProvider="background"
+                        android:clickable="true"
+                        android:focusable="true"
+                        android:contentDescription="Profile avatar"/>
                 </FrameLayout>
 
                 <TextView
